[package]
name = "fluxcd-api-source-github-keys"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.14", default-features = false }
kube = { version = "0.69", default-features = false, features = ["derive"] }
schemars = "0.8"
serde = "1"
serde_json = "1"

fluxcd-acl = { version = "0.0.0", path = "../../../libs/acl" }
fluxcd-meta = { version = "0.0.0", path = "../../../libs/meta" }

[dev-dependencies]
k8s-openapi = { version = "0.14", default-features = false, features = [
  "v1_21",
] }
