[package]
name = "fluxcd-api-source-github-keys"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "=0.14.0", default-features = false }
kube = { version = "=0.69.1", default-features = false, features = ["derive"] }
schemars = "=0.8.8"
serde = "=1.0.136"
serde_json = "=1.0.79"

fluxcd-acl = { version = "0.0.0", path = "../../../libs/acl" }
fluxcd-meta = { version = "0.0.0", path = "../../../libs/meta" }

[dev-dependencies]
k8s-openapi = { version = "=0.14.0", default-features = false, features = [
  "v1_21",
] }
