[package]
name = "fluxcd-source-controller-github-keys"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
eyre = "0.6"
kube = { version = "0.69", default-features = false, features = [
  "client",
  "rustls-tls",
] }
k8s-openapi = { version = "0.14", default-features = false, features = [
  "v1_21",
] }
serde_yaml = "0.8"

fluxcd-api-source-github-keys = { version = "0.0.0", path = "../../../api/source/github-keys" }
fluxcd-utils-cap = { version = "0.0.0", path = "../../../libs/utils/cap" }
