[package]
name = "fluxcd-utils-cap"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=3.1.6", features = ["derive"] }
eyre = "=0.6.7"
futures = "=0.3.21"
k8s-openapi = { version = "=0.14.0", default-features = false }
kube = { version = "=0.69.1", default-features = false }
schemars = "=0.8.8"
serde = "=1.0.136"
serde_json = "=1.0.79"
serde_yaml = "=0.8.23"
signal-hook = "=0.3.13"
signal-hook-tokio = { version = "=0.3.1", features = ["futures-v0_3"] }
thiserror = "=1.0.30"
tokio = { version = "=1.17.0", features = ["rt-multi-thread"] }
tracing = "0.1"

fluxcd-utils-cops = { version = "0.0.0", path = "../cops" }
fluxcd-utils-telemetry = { version = "0.0.0", path = "../telemetry" }

[dev-dependencies]
k8s-openapi = { version = "=0.14.0", default-features = false, features = [
  "v1_21",
] }
