[package]
name = "fluxcd-utils-cops"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "=0.1.52"
eyre = "=0.6.7"
k8s-openapi = { version = "=0.14.0", default-features = false }
kube = { version = "=0.69.1", default-features = false, features = [
  "client",
  "runtime",
] }
prometheus = "=0.13.0"
schemars = "=0.8.8"
serde = "=1.0.136"

[dev-dependencies]
k8s-openapi = { version = "=0.14.0", default-features = false, features = [
  "v1_21",
] }
